@@ -151,6 +151,7 @@ static const char		*excp_current_program_id = NULL;
 static const char		*excp_current_section = NULL;
 static const char		*excp_current_paragraph = NULL;
 static struct cb_program	*current_prog = NULL;
+static struct cb_program	*recent_prog = NULL;
 
 static struct cb_label		*last_section = NULL;
 static unsigned char		*litbuff = NULL;
@@ -4172,6 +4173,15 @@ output_call (struct cb_call *p)
 	/* Set number of parameters */
 	output_prefix ();
 	output ("cob_glob_ptr->cob_call_params = %u;\n", n);
+	if (recent_prog != NULL
+	 && recent_prog->max_call_param > n) {
+		if ((recent_prog->max_call_param - n) > 1) {
+			output_line ("memset(&cob_procedure_params[%d],0,sizeof(cob_procedure_params[0])*%d);",
+								n, (recent_prog->max_call_param - n));
+		} else {
+			output_line ("cob_procedure_params[%u] = NULL;", n);
+		}
+	}
 
 	/* Function name */
 	output_prefix ();
@@ -7311,6 +7321,7 @@ output_error_handler (struct cb_program *prog)
 	int			n;
 	int			parmnum;
 
+	recent_prog = prog;
 	output_newline ();
 	seen = 0;
 	for (i = COB_OPEN_INPUT; i <= COB_OPEN_EXTEND; i++) {
@@ -7390,6 +7401,7 @@ output_module_init (struct cb_program *prog)
 	output ("/* Flag main program, Fold call, Exit after CALL */\n\n");
 #endif
 
+	recent_prog = prog;
 	/* Do not initialize next pointer, parameter list pointer + count */
 	output_line ("/* Initialize module structure */");
 	output_line ("module->module_name = \"%s\";", prog->orig_program_id);
@@ -7493,6 +7505,7 @@ output_internal_function (struct cb_program *prog, cb_tree parameter_list)
 	int			seen;
 	int			anyseen;
 
+	recent_prog = prog;
 	/* Program function */
 #if	0	/* RXWRXW USERFUNC */
 	if (prog->prog_type == CB_FUNCTION_TYPE) {
@@ -8694,6 +8707,7 @@ output_entry_function (struct cb_program *prog, cb_tree entry,
 	int			sticky_ids[COB_MAX_FIELD_PARAMS];
 	int			sticky_nonp[COB_MAX_FIELD_PARAMS];
 
+	recent_prog = prog;
 	entry_name = CB_LABEL (CB_PURPOSE (entry))->name;
 	using_list = CB_VALUE (entry);
 
